--- a/style.css
+++ b/style.css
@@ -66,14 +66,14 @@ h3 {
 }
 
 
-#productos-recomendados .tarjetas{
+.tarjetas {
     margin: 10px;
     padding: 10px;
     background-color: orange;
     justify-content: center;
 
 }
-#productos-recomendados .tarjetas :hover {
+.tarjetas :hover {
  background-color: grey;
  transform: translateY(-15px);
  cursor: pointer;
@@ -83,7 +83,9 @@ h3 {
 .promo {
     background-color: green;
 }
-
+.fondonosotros {
+    background-image: linear-gradient(120deg, gold, orange, orangered);
+}
 
 .nosotros {
     padding: 20px;
