--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ h3 {
   cursor: pointer; }
 
 .promo {
-  background-color: green; }
+  background-color: blue; }
 
 .producto__titulo {
   font-size: 30px;
