--- a/scss/pages/sobrenosotros.scss
+++ b/scss/pages/sobrenosotros.scss
@@ -8,9 +8,8 @@
     background-image: linear-gradient(120deg, gold, orange, orangered);
 
     &__texto {
+        @extend .nosotros;
         font-size: 30px;
-        padding-bottom: 20px;
-        background-image: linear-gradient(120deg, gold, orange, orangered);
     }
 }
 
