--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -68,7 +68,20 @@ h1 {
     background-position: right center;
     z-index: 1;
 }
-
+.Footergenerico {
+    background-color: rgb(35, 34, 36);
+  }
+  
+  .footer-heading {
+    font-size: 30px;
+    color: black;
+    font-weight: 700;
+    margin-bottom: 30px;
+  }
+  
+  .logo {
+    color: white;
+  }
 // mixins
 @mixin flex($valuejustify, $alignitems)  {
     display: flex;
