--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,7 +1,7 @@
 @media (max-width:360px) {
 
     .main{
-        background-color: orange;
+        background-color: blueviolet;
         display: grid;
         
     }
@@ -28,7 +28,7 @@
 
         .main {
             display: grid;
-            background-color: orange;
+            background-color: blueviolet;
         }
         .header {
         display: none;
