--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,5 @@
 @import './pages/index.scss';
 @import './pages/locales.scss';
 @import './pages/sobrenosotros.scss';
-@import './pages/productos.scss'
+@import './pages/productos.scss' ;
+@import './pages/footer.scss' ;
