--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
 
 main {
-  background-color: orange;
+  background-color: blueviolet;
   color: #e6e1e1;
   text-align: center;
   padding: 20px;
@@ -31,7 +31,7 @@ h1 {
 .tarjetas {
   margin: 10px;
   padding: 10px;
-  background-color: orange;
+  background-color: blueviolet;
   justify-content: center; }
 
 .tarjetas :hover {
@@ -46,7 +46,7 @@ h1 {
   font-size: 30px;
   text-align: center;
   padding-bottom: 30px;
-  background-color: orange;
+  background-color: blueviolet;
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2; }
@@ -66,16 +66,16 @@ iframe {
   justify-content: center; }
 
 .fondonosotros {
-  background-image: linear-gradient(120deg, gold, orange, orangered); }
+  background-image: linear-gradient(120deg, blueviolet, purple); }
 
 .nosotros {
   padding: 20px;
   padding-bottom: 20px;
-  background-image: linear-gradient(120deg, gold, orange, orangered); }
+  background-image: linear-gradient(120deg, blueviolet, purple); }
   .nosotros__texto {
     font-size: 30px;
     padding-bottom: 20px;
-    background-image: linear-gradient(120deg, gold, orange, orangered); }
+    background-image: linear-gradient(120deg, blueviolet, purple); }
 
 .img__clientes {
   padding-top: 100px;
@@ -85,11 +85,25 @@ iframe {
   margin: 0;
   transform: translate(100px, -100px); 
 }
+.Footergenerico {
+  background-color: rgb(35, 34, 36);
+}
+
+.footer-heading {
+  font-size: 30px;
+  color: black;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.logo {
+  color: white;
+}
 
 @media (max-width: 360px) {
   .main {
-    background-color: orange;
-    display: grid; }
+    background-color: blueviolet
+    display: grid;} 
   .header {
     display: none; }
   .container {
@@ -100,12 +114,13 @@ iframe {
   .footer {
     max-width: fit-content; }
   .instagram {
-    display: none; } }
+    display: none; } 
+}
 
 @media (max-width: 550px) {
   .main {
     display: grid;
-    background-color: orange; }
+    background-color: blueviolet; }
   .header {
     display: none; }
   .container {
@@ -114,7 +129,8 @@ iframe {
   .instagram {
     display: none; }
   .footer {
-    max-width: fit-content; } }
+    max-width: fit-content; }
+    }
 
 @media (max-width: 850px) {
   .nav-item {
